kubernetes/apps/paperless/paperless-ai.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ai
  namespace: apps
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: paperless-ai
  template:
    metadata:
      labels:
        app: paperless-ai
    spec:
      tolerations:
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
      containers:
      - name: paperless-ai
        image: clusterzx/paperless-ai:2.8.2
        resources:
          requests:
            cpu: 50m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 1536Mi
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: data
          mountPath: /app/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: paperless-ai-data
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-ai
  namespace: apps
spec:
  ports:
  - port: 3000
  selector:
    app: paperless-ai
