kubernetes/apps/paperless/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ingress
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: apps-authelia@kubernetescrd
spec:
  rules:
  - host: docs.woitzik.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paperless
            port:
              number: 8000
