kubernetes/apps/paperless/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless
  namespace: apps
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`docs.woitzik.dev`)
    kind: Rule
    middlewares: [{name: authelia}]
    services: [{name: paperless, port: 8000}]
  tls: {secretName: wildcard-woitzik-dev-tls}
